syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "./;pb";

enum PlaneStatus {
    STS_UNSPECIFIED = 0;
    STS_CLEANING = 1;
    STS_MAINTAIN = 2;
    STS_READY = 3;
}

message PlaneInfo {
    string id = 1;
    string type = 2;
    int32 total_seat = 3;
    PlaneStatus status = 4;
}

message FindPlaneByIdRequest {
    string id = 1;
}

message DeletePlaneByIdRequest {
    string id = 1;
}

service PlaneService {
    rpc CreatePlane(PlaneInfo) returns (PlaneInfo) {}
    rpc UpdatePlane(PlaneInfo) returns (PlaneInfo) {}
    rpc ListPlanes(google.protobuf.Empty) returns (stream PlaneInfo) {}
    rpc FindPlane(FindPlaneByIdRequest) returns (PlaneInfo) {}
    rpc DeletePlane(DeletePlaneByIdRequest) returns (google.protobuf.Empty) {}
}